Closed Bug 127842 Opened 23 years ago Closed 22 years ago

Reload the Bookmark and History tab context menu in sidebar crashes mozilla - Trunk M100 N70PR1 [@ nsXULTreeBuilder::GetTemplateActionCellFor]

Categories

(SeaMonkey :: Bookmarks & History, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.2alpha

People

(Reporter: p_ch, Assigned: janv)

References

Details

(Keywords: crash, testcase, topcrash+, Whiteboard: [adt2])

Crash Data

Attachments

(1 file)

linux build 2002 02 25 08

reproducibility: always

Talkback ID: TB3380718G (for the bookmarks)
             TB3380877Q (for the history)
additional comment: 
- no crash occurs if the search tab has been previously loaded.
- no crash reloading the search tab and the adressbook tab.
Both are crashing in outliner code (nsXULOutlinerBuilder.cpp line 1375 where
mBoxObject is null).  Over to Ben for a look since he may be in a better
position to troubleshoot.  All the sidebar does is reset the src of the iframe
holding the bookmarks and history tabs.
Assignee: sgehani → ben
Component: Sidebar → Bookmarks
QA Contact: sujay → claudius
taking
Assignee: ben → varga
Had it !

Hope it would be soon killed ! :->)
Keywords: crash, regression
OS: Linux → All
os x as well.
Hardware: PC → All
It is again in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:0.9.9)
Gecko/20020309 build :-(

Very /annoying/ bug ! I did a clean install of this build, and this bug is
always here :-(
And it seems to stay ! Had it with a 10th march build ! :-(
This bug seems also to be in march 11th build :-(

I downloaded and try (for /fun/) the win32 build from latest folder. And I can
reproduce this bug.

It would be fixed in which milestone ? Mozilla 1.5 ? ;->)

Just kidding !

It would be great to see it fixed for good !
Keywords: mozilla1.0, nsbeta1
Please, Frederic, don't spam this bug. It won't be fixed until a patch will be
attached. This bug is a "I-can-show-you-how-to-crash-mozilla-in-two-clicks" bug,
but it is no way very important since reloading the boomarks or history does not
make sense unless you change by hand the files while mosilla is running. You can
spend your time more efficiently by reporting, duping bugs or writing testcases.
see http://www.mozilla.org/get-involved.html for the details.

btw, removing the regression keyword, unless s.o .can point me to a build with
this (new) feature not crashing mozilla.
Keywords: regression
I am sorry ! I will forget this bug for at least one week ! 

Let's only hope there would be an answer soon !

I am only an user, not a coder :-(

For bugs reporting / confirming, you can count on me :-)

Even if I will use 0.9.9 milestone release at least for one week ;-)
Bug 127842 "Crash when switching to bookmarks tab in sidebar
[nsXULOutlinerBuilder::GetTemplateActionCellFor]" is probably a dup of this one.
(Currently bug 127842 is marked as a dup of bug 131203 - is that another dup of
this one, or a separate bug?).

In any case, I can no longer reporoduce bug 127842 crash using BuildId
2002031607 even though I could reproduce it using yesterday's build! Is this bug
gone?
nsbeta1- per Nav triage team, ->1.0
Keywords: nsbeta1nsbeta1-
Target Milestone: --- → mozilla1.2alpha
*** Bug 143721 has been marked as a duplicate of this bug. ***
Can't reproduce anymore.
Reporter could you verify ?
I still see this. I tested on a branch build and trunk build from 6/13.
Original reporter - I still have the bug in 1.1a build 2002061104, even with
deleting the profile and uninstalling and installing the new version.
Attached patch fixSplinter Review
This patch fixes the crash in the builder view and also possible crash in the
content view.
I also found a useless member variable in nsTreeBoxObject.
Comment on attachment 88357 [details] [diff] [review]
fix

r=bryner
Attachment #88357 - Flags: review+
fixed
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Yes ! It is fixed ! I hate it a lot :-)

Using trunk build 2002062109 and WinXP.
renominating nsbeta1 as bug 150700 is a topcrash+, and a dupe of this bug. pls
nsbeta1+ this one, so we can address a topcrasher.
Blocks: 143047
Keywords: nsbeta1-nsbeta1
Whiteboard: [adt2 RTM] [ETA 06/24]
*** Bug 150700 has been marked as a duplicate of this bug. ***
Adding topcrash+, testcase keywords and Trunk M100 N70PR1 [@
nsXULTreeBuilder::GetTemplateActionCellFor] to summary from duped bug 150700.  

Let's get this into the branch if we can...it's been a topcrasher for Mozilla
1.0, Netscape 7.0PR1 and recent branch builds (as well as the Trunk, but it has
been fixed there already).
Keywords: testcase, topcrash+
Summary: Reload the Bookmark and History tab context menu in sidebar crashes mozilla → Reload the Bookmark and History tab context menu in sidebar crashes mozilla - Trunk M100 N70PR1 [@ nsXULTreeBuilder::GetTemplateActionCellFor]
*** Bug 160744 has been marked as a duplicate of this bug. ***
mass changing adt1.0.1 to adt1.0.2 nominations.
Keywords: adt1.0.2
Keywords: adt1.0.1
claudius: can you pls verify this as fixed on the trunk? thanks!
Whiteboard: [adt2 RTM] [ETA 06/24] → [adt2]
It's only fixed on the trunk. It has not been fixed on the branch yet.
Need this verified on the trunk ASAP before we can consider for the branch.
Claudius -> Paul for verifications
QA Contact: claudius → paw
This is not getting significant 7.0 crashes according to my reading of the
database (rank 100 of the top 100). adt- for the branch
Keywords: adt1.0.2adt1.0.2-
Comment on attachment 88357 [details] [diff] [review]
fix

a=rjesup@wgate.com for the 1.0 branch; this is a pretty small set of changes. 
Please change mozilla1.0.2+ to fixed1.0.2 when checked in
Attachment #88357 - Flags: approval+
Updating qa contact to claudius@netscape.com
QA Contact: paw → claudius
fixed on 1.0 branch.
Verified on the branch build (20021031) on Windows, Mac, Linux
Product: Browser → Seamonkey
Crash Signature: [@ nsXULTreeBuilder::GetTemplateActionCellFor]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: