Fix for bug 127842 - Reload the Bookmark and History tab context menu in sidebar crashes mozilla r=bryner, sr=shaver